--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -8,4 +8,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci   
+      - name: Lint
+        run: npm run lint
+      - name: Build code
+        run: npm run build
+      - name: deploy Code
+        run: echo "ready to deploy..."  
+
         
