--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -1,5 +1,5 @@
 name: Deployment exercise 2
-on: push
+on: [push,workflow_dispatch]
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci       
-      - name: deploy Code
+      - name: Build code
         run: echo "ready to deploy..."  
 
         
