--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: output Event Data
-        run: echo "{{ toJSON(github.event) }}"
+        run: echo "${{ toJSON(github.event) }}"
       - name: Get Code
         uses: actions/checkout@v3
       - name: Install dependencies
