--- a/.github/workflows/deployment2.yaml
+++ b/.github/workflows/deployment2.yaml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: output Event Data
         run: echo "${{ toJSON(github.event) }}"
+      - name: output action Data
+        run: echo "${{ toJSON(github.action) }}"
       - name: Get Code
         uses: actions/checkout@v3
       - name: Install dependencies
